[project]
name = "iiixr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,mujoco]>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "optuna>=4.4.0",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "PyYAML>=6.0",
    "pandas>=2.3.0",
]
